// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <CustomInputInline /> should renders with all props correctly 1`] = `
<div
  className="wrap-fcustominp"
>
  <div
    className="fcustominp"
  >
    <input
      checked={true}
      id="test-id"
      name="test-name"
      type="checkbox"
      value={true}
    />
    <label
      htmlFor="test-id"
    />
  </div>
  <label
    className="testClass"
    htmlFor="test-id"
  >
    Test label
  </label>
</div>
`;

exports[`Component <CustomInputInline /> should renders without label prop correctly 1`] = `
<div
  className="wrap-fcustominp"
>
  <div
    className="fcustominp"
  >
    <input
      checked={true}
      id="test-id"
      name="test-name"
      type="radio"
      value={true}
    />
    <label
      htmlFor="test-id"
    />
  </div>
  <label
    htmlFor="test-id"
  >
    Test label
  </label>
</div>
`;
